中文>>日本語/한국어/English

--- a/map/ze_purification_a1/default_ents.jsonc
+++ b/map/ze_purification_a1/default_ents.jsonc
@@ -60,7 +60,7 @@
 			"targetname": "language_case",
 			"classname": "logic_case",
 			"case01": "1", // 日本語
-			"case02": "2", // 한국어,
+			"case02": "2", // 한국어
 			"case03": "3", // English
 			"io":
 			[
@@ -1680,7 +1680,7 @@
     ],
     "modify": // remove message output, add targetname
     [
-		// message "建筑参考：Abrahamic Family House by Adjaye Associates"
+		// message : "建筑参考：Abrahamic Family House by Adjaye Associates"
 		{
             "match":
             {
@@ -1692,7 +1692,7 @@
                 "targetname": "3730"
             }
 		},
-		// message "test server: exg 感谢赞助：Bella•Lientece"
+		// message : "test server: exg 感谢赞助：Bella•Lientece"
 		{
             "match":
             {
@@ -2526,5 +2526,3 @@
 		}			
     ]
 }
-
-
